--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -4,18 +4,11 @@
 # Uncomment the following line to increase the keyboard's wireless range
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
-### RGB UNDERGLOW
-# uncomment to enable RGB Underglow or backlight
-CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_WS2812_STRIP=y
-# apaga si no se usa el teclado
-# CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
-# 0	Solid color    1 Breathe     2	Spectrum     3	Swirl
-CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
-# nivel de brillo en porcentaje, el valor por defecto es 10 por ciento
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=1
-# Turn off RGB underglow when keyboard goes into idle state
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+CONFIG_ZMK_RGB_PER_KEY=y  # Activar iluminación RGB por tecla
+CONFIG_WS2812_STRIP=y  # Habilitar el uso de tiras LED WS2812
+CONFIG_ZMK_RGB_PER_KEY_EFF_START=3  # Efecto RGB predeterminado al encender (modo 3)
+CONFIG_ZMK_RGB_PER_KEY_BRT_MAX=60  # Brillo máximo del RGB al 60%
+CONFIG_ZMK_RGB_PER_KEY_AUTO_OFF_IDLE=n  # No apagar RGB cuando el teclado está inactivo
 
 # Enable eager debouncing
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
