--- a/config/west.yml
+++ b/config/west.yml
@@ -1,11 +1,7 @@
-manifest:
-  remotes:
-    - name: zmkfirmware
-      url-base: https://github.com/zmkfirmware
-  projects:
-    - name: zmk
-      remote: zmkfirmware
-      revision: main
-      import: app/west.yml
-  self:
-    path: config
+include:
+  - board: nice_nano_v2
+    shield: lily58_left
+    keymap: lily58_left
+  - board: nice_nano_v2
+    shield: lily58_right
+    keymap: lily58_right
